--- a/Amabam/app/src/main/res/layout/activity_home_games.xml
+++ b/Amabam/app/src/main/res/layout/activity_home_games.xml
@@ -32,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_button_background"
+                android:onClick="wordle"
                 android:text="@string/game_two"
                 android:textColor="@color/light_button_text" />
 
