--- a/Amabam/app/src/main/res/layout/activity_categories_hangman.xml
+++ b/Amabam/app/src/main/res/layout/activity_categories_hangman.xml
@@ -13,10 +13,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             android:orientation="vertical">
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <ImageButton
+                android:id="@+id/home_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:onClick="click_to_home"
+                app:srcCompat="@drawable/ic_baseline_home_24" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
 
             <Button
                 android:id="@+id/animals"
@@ -68,9 +83,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_button_background"
+                android:onClick="category_selected"
                 android:text="@string/categories_random"
-                android:textColor="@color/light_button_text"
-                android:onClick="category_selected" />
+                android:textColor="@color/light_button_text" />
         </LinearLayout>
     </ScrollView>
 
