--- a/Amabam/app/src/main/res/layout/activity_square_colors_game.xml
+++ b/Amabam/app/src/main/res/layout/activity_square_colors_game.xml
@@ -16,6 +16,17 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:orientation="vertical">
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <ImageButton
+                android:id="@+id/home_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:onClick="click_to_home"
+                app:srcCompat="@drawable/ic_baseline_home_24" />
 
             <Space
                 android:layout_width="match_parent"
